# cfb

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  MANIFEST.in  Makefile  Pipfile  README.md  setup.py
cfb/: cli.py  constants.py  context.py  generator.py  namespace.py  struct.py  test_cli.py  test_context.py  test_namespace.py  test_struct.py
cfb-core/: Cargo.toml
cfb-runtime/: Cargo.toml
cfb-schema/: Cargo.toml
cfbc/: Cargo.toml  build.rs
cfbc/src/: cli_options.rs  exit_code.rs  generator.rs  lang.rs  main.rs  templates.rs
cfbc/src/helpers/: common_helpers.rs  mod.rs  rust_helpers.rs  schema_context.rs
cfbc/src/helpers/rust_helpers/: field_default_helper.rs  is_field_present_helper.rs  mod.rs  rust_type_helper.rs
cfbc/templates/: _builder_enum.rs.hbs  _builder_object.rs.hbs  _builder_table.rs.hbs  builder.rs.hbs
cfbc/templates/rust/: _builder_enum.rs.hbs  _builder_object.rs.hbs  _builder_struct.rs.hbs  _builder_table.rs.hbs  builder.rs.hbs
cfbc/tests/: enum_test.proptest-regressions  enum_test.rs  plain_table_builder_test.rs  string_test.rs  struct_nesting_test.rs  struct_test.rs
cfbc/tests/common/: enum_builder.rs  enum_generated.rs  mod.rs  plain_table_builder.rs  plain_table_generated.rs  string_builder.rs  string_generated.rs  struct_builder.rs  struct_generated.rs  struct_nesting_builder.rs  struct_nesting_generated.rs
flatbuffers-verifier/: Cargo.toml
reflection/: test_Schema.py
schema/: enum.bfbs  enum.fbs  enum.json  plain_table.bfbs  plain_table.fbs  plain_table.json  string.bfbs  string.fbs  string.json  struct.bfbs  struct.fbs  struct.json  struct_nesting.bfbs  struct_nesting.fbs  struct_nesting.json
src/: alignment.rs  builder.rs  lib.rs  scalar.rs
tests/: ckb_verifier_test.rs  enum_test.rs  enum_vector_test.rs  nested_buffer_test.rs  offset_overflow_test.rs  rfc_examples_test.rs  scalar_vector_test.proptest-regressions  scalar_vector_test.rs  scalars_with_different_size_test.rs  scalars_with_same_size_test.rs  string_test.proptest-regressions  string_test.rs  string_vector_test.proptest-regressions  string_vector_test.rs  string_verifier_test.rs  struct_test.rs  struct_vector_test.rs  (+6 more)
(+120 files in other folders)
